<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TableRow  
        android:layout_width="match_parent">
        
        <Button 
            android:layout_width="match_parent"    
	        android:layout_height="wrap_content"   
	        android:text="@string/boton1"/>
        
        <Button 
            android:layout_width="match_parent"    
	        android:layout_height="wrap_content"   
	        android:text="@string/boton2"/>
        
        <Button 
            android:layout_width="match_parent"    
	        android:layout_height="wrap_content"   
	        android:text="@string/boton3"/>
        
    </TableRow>
    
    <TableRow  
        android:layout_width="match_parent">
        
        <Button 
            android:layout_width="match_parent"    
	        android:layout_height="wrap_content"   
	        android:text="@string/boton4"/>
        
        <Button 
            android:layout_width="match_parent"    
	        android:layout_height="wrap_content"   
	        android:text="@string/boton5"/>
        
        <Button 
            android:layout_width="match_parent"    
	        android:layout_height="wrap_content"   
	        android:text="@string/boton6"/>
        
    </TableRow>
    
    <TableRow 
        android:layout_width="match_parent">
        
        <Button 
            android:layout_width="match_parent"    
	        android:layout_height="wrap_content"   
	        android:text="@string/boton7"/>
        
        <Button 
            android:layout_width="match_parent"    
	        android:layout_height="wrap_content"   
	        android:text="@string/boton8"/>
        
        <Button 
            android:layout_width="match_parent"    
	        android:layout_height="wrap_content"   
	        android:text="@string/boton9"/>
        
    </TableRow>
    
    
</TableLayout>